kustomize/overlays/pluto/webapp-deploy-rolling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      run: pluto
  template:
    metadata:
      labels:
        run: pluto
