kustomize/overlays/pluto/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    run: pluto
